# caktykbot

./: .env.example  .gitignore  PHASE0_SUMMARY.md  Procfile  README.md  __init__.py  main.py  pyproject.toml  railway.json  railway.toml  requirements.txt  score_gen_fail.txt  scoring_fail.txt  seed_dashboard.py  test_detail.txt  test_output.txt
.github/workflows/: deploy.yml
.streamlit/: config.toml
analytics/: adaptive_scorer.py  bias_detector.py  breakdown.py  equity_curve.py  monthly_report.py  psychology.py
backtest/: engine.py  metrics.py  report.py
bot/: manager.py  utils.py
bot/handlers/: __init__.py  analyze_handler.py  backtest_handler.py  bandar_handler.py  follow_handler.py  health_handler.py  (+10 more)
config/: __init__.py  logging.py  settings.py
dashboard/: app.py  auth.py
data/: __init__.py  fetcher.py  idx_scraper.py  pipeline.py  scraper_config.py
db/: __init__.py  connection.py  indexes.py  schemas.py
engine/: __init__.py  scorer.py  signal_generator.py
journal/: calculator.py  exporter.py  statistics.py  trade_manager.py
logic/: indicators.py
monitoring/: audit_logger.py  health_check.py
risk/: circuit_breaker.py  constants.py  correlation.py  heat_monitor.py  position_sizer.py  risk_validator.py  sector_mapper.py
scheduler/: __init__.py  jobs.py
scripts/: profile_pipeline.py
strategies/: __init__.py  bandarmologi.py  base.py  ema_pullback.py  utils.py  vcp.py
tests/: __init__.py  conftest.py  test_adaptive_scoring.py  test_analytics.py  test_audit_logger.py  test_backtest_engine.py  test_backtest_metrics.py  test_bandarmologi.py  test_bot_handlers.py  test_bot_manager.py  test_circuit_breaker.py  test_connection.py  test_correlation.py  test_coverage_gap.py  test_ema_pullback.py  test_exceptions.py  test_fetcher.py  test_health_check.py  test_heat_monitor.py  test_idx_scraper.py  test_indexes.py  test_indicators.py  test_logging.py  test_main.py  test_monthly_report.py  test_pipeline.py  test_position_sizer.py  test_repositories.py  test_risk_validator.py  test_scheduler.py  test_schemas.py  test_sector_mapper.py  test_settings.py  test_signal_generator.py  test_signal_generator_scoring.py  test_vcp.py
utils/: exceptions.py
(+22 files in other folders)
